--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,38 @@
   color: #61dafb;
 }
 
+.Main_Page{
+  text-align:"-webkit-center" !important;
+}
+
+.margin-left-5{
+  margin-left: 5%;
+  
+}
+
+.section{
+  padding: 1%;
+}
+
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
+
+.btn-div{margin: 1% 1%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
