--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,13 @@ body {
   height: 100px;
   text-align: center;
 }
+
+.rsc {
+  display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
