--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ tr:nth-child(even) {
 
 .section {
   flex: 1; /*grow*/
-  border: 1px solid;
+  /* border: 1px solid; */
   font-size: 11px;
     font-family: sans-serif;
 }
