--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,21 @@ tr:nth-child(even) {
 .react-chatbot-kit-chat-bot-message{
   margin-left: 2%  !important;
 }
+
+.disabled{
+  opacity: 0.6;
+  cursor: not-allowed;
+  pointer-events: none;
+
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
